2005-12-07 - laffin -
	Relocated a bunch of variables from bittorrent.php and cleanup.php bitbutcket-upload.php.php
	Added Mod - Admincp.php [By Laffin], Orignal Mod (admincp.php & config.php) [Idea from mod BY Enzo,Ap0c and Triton] this maintains the config.php, which now houses the relocated variables
	Added Mod - Do not delete active torrents that have exceeded the TTL (cleanup.php) [By: TheBrass]
	Added Mod - Alternate Announce Url [By: Laffin](tracker.php) Uses http://my.domain.com/tracker.php/passkey/[announce/scrape] alternative announce/scrape url
	Added Mod - Passkey [By: Laffin] (takedownload.php download.php announce.php tracker.php) Original Mod: SKORPiUS
	Added Mod - Compact Mode announce [By: Laffin] (announce.php) - Original Mod: Psor
	Added Mod - Optional NFO file on torrent uploads (used to be required)

2004-05-26 - wyz - Security fix in userdetails.php. Avatar field was not being escaped, html injection was possible (confirmed).

2004-05-26 - rb - userdetails: added seeder/leecher count and did some optimizations.

2004-05-25 - wyz - Comments editing added. Added comment.php, removed takecomment.php, addcomment.php, deletecomment.php. Altered details.php, bittorrent.php.

2004-05-25 - rb - Share ratio changed to 3 decimals in userdetails and details.

2004-05-22 - rb - Added a 'revived' column to the peers (database) table. Set to "yes" if the event is not "start" and the peer is not found in the database. This replaces the "Peer not found" error message which seemed to cause quite some problems.

2004-05-21 - rb - Made download speed static for seeders.

2004-05-18 - wyz - Passwords are no longer stored in cleartext: altered adduser.php, confirm.php, delacct.php, recover.php, takelogin.php, takeprofedit.php, takesignup.php, bittorrent.php. Database: new field passhash in users.

2004-05-18 - rb - Added "Client" column to peers table.

2004-05-18 - rb - Added upload/download "Avg. Rate" columns to the peers table in details.php.
