@@ -1,3 +1,5 @@
+2005-12-21 - Triton - Fixed countries.sql
+2005-12-20 - laffin - fixed bittorrent.php line 14, and admincp.php line 324 (errors)
 2005-12-07 - laffin -
 	Relocated a bunch of variables from bittorrent.php and cleanup.php bitbutcket-upload.php.php
 	Added Mod - Admincp.php [By Laffin], Orignal Mod (admincp.php & config.php) [Idea from mod BY Enzo,Ap0c and Triton] this maintains the config.php, which now houses the relocated variables
